Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
             <div class="header-container">
                 <a href="#" class="logo">
                     <i class="fas fa-home"></i>
-                    Inmo<span style="color: var(--secondary);">Premium</span>
+                    Carlos Perez<span style="color: var(--secondary);">Real State</span>
                 </a>
                 
                 <nav>
@@ -1447,3 +1447,4 @@
 </body>
 
 </html>
+
