Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
     <section class="hero" id="inicio">
         <div class="container">
             <h1>Dominican Investor</h1>
-            <p>Descubre las mejores propiedades en venta y alquiler. Más de 10 años ayudando a familias a encontrar su lugar perfecto.</p>
+            <p>Descubre oportunidades inmobiliarias estratégicas en Republica Dominicana, enfocadas en rentabilidad, plusvalia y seguridad para inversionistas.</p>
             <a href="#propiedades" class="btn">Explorar Propiedades</a>
         </div>
     </section>
@@ -1447,6 +1447,7 @@
 </body>
 
 </html>
+
 
 
 
