Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
         <div class="container">
             <h1>Dominican Investor</h1>
             <p>Descubre oportunidades inmobiliarias estratégicas en Republica Dominicana, enfocadas en rentabilidad, plusvalia y seguridad para inversionistas.</p>
-            <a href="#propiedades" class="btn">Explorar Propiedades</a>
+            <a href="#propiedades" class="btn">Explorar oportunidades de inversión</a>
         </div>
     </section>
 
@@ -1447,6 +1447,7 @@
 </body>
 
 </html>
+
 
 
 
