Refine headline next to logo

--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
             <div class="header-container">
                 <a href="#" class="logo">
                     <i class="fas fa-home"></i>
-                    Oportunidades Premium<span style="color: var(--secondary);">Para Inversores Visionarios</span>
+                    Plataforma de inversión inmobiliaria premium <span style="color: var(--secondary);">en Republica Dominicana</span>
                 </a>
                 
                 <nav>
@@ -1447,6 +1447,7 @@
 </body>
 
 </html>
+
 
 
 
