Refine main value proposition text

--- a/index.html
+++ b/index.html
@@ -731,7 +731,9 @@
     <section class="hero" id="inicio">
         <div class="container">
             <h1>Dominican Investor</h1>
-            <p>Descubre oportunidades inmobiliarias estratégicas en Republica Dominicana, enfocadas en rentabilidad, plusvalia y seguridad para inversionistas.</p>
+            <p>Descubre oportunidades de inversión inmobiliaria en República Dominicana,
+seleccionadas por su alta rentabilidad, potencial de plusvalía y seguridad jurídica
+para inversionistas extranjeros.</p>
             <a href="#propiedades" class="btn">Explorar oportunidades de inversión</a>
         </div>
     </section>
@@ -1447,6 +1449,7 @@
 </body>
 
 </html>
+
 
 
 
