Investor-focused language in filters

--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@ para inversionistas extranjeros.</p>
                     <div class="filter-group">
                         <label for="typeFilter">Tipo</label>
                         <select id="typeFilter">
-                            <option value="">Venta o Alquiler</option>
+                            <option value="">Compra o Alquiler</option>
                             <option value="venta">En Venta</option>
                             <option value="alquiler">En Alquiler</option>
                         </select>
@@ -778,13 +778,13 @@ para inversionistas extranjeros.</p>
                     
                     <div class="filter-group">
                         <label for="locationFilter">Ubicación</label>
-                        <input type="text" id="locationFilter" placeholder="Ej: Centro, Norte...">
+                        <input type="text" id="locationFilter" placeholder="Zonas de alto potencial">
                     </div>
                 </div>
                 
                 <div class="filter-actions">
                     <button class="btn" id="applyFiltersBtn">
-                        <i class="fas fa-search"></i> Buscar Propiedades
+                        <i class="fas fa-search"></i> Analizar Oportunidades
                     </button>
                     <button class="btn btn-outline" id="clearFiltersBtn">
                         <i class="fas fa-times"></i> Limpiar Filtros
@@ -1449,6 +1449,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
