Refine main navigation for investor positioning

--- a/index.html
+++ b/index.html
@@ -713,9 +713,9 @@
                 <nav>
                     <ul id="mainNav">
                         <li><a href="#inicio" class="active">Inicio</a></li>
-                        <li><a href="#propiedades">Propiedades</a></li>
-                        <li><a href="#servicios">Servicios</a></li>
-                        <li><a href="#nosotros">Nosotros</a></li>
+                        <li><a href="#propiedades">Oportunidades</a></li>
+                        <li><a href="#servicios">Inversión & Asesoría</a></li>
+                        <li><a href="#nosotros">La Firma</a></li>
                         <li><a href="#contacto">Contacto</a></li>
                     </ul>
                 </nav>
@@ -1449,6 +1449,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
