Optimize H1 , subtitle and CTA for investor-focused SEO

--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
             <p>Descubre oportunidades de inversión inmobiliaria en República Dominicana,
 seleccionadas por su alta rentabilidad, potencial de plusvalía y seguridad jurídica
 para inversionistas extranjeros.</p>
-            <a href="#propiedades" class="btn">Explorar oportunidades de inversión</a>
+            <a href="#propiedades" class="btn">Ver oportunidades de inversión</a>
         </div>
     </section>
 
