--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DominicanInvestor.net</title>
+    <meta name="description" content=meta name="description" content="Plataforma de inversión inmobiliaria en República Dominicana. Oportunidades premium para inversores extranjeros que buscan rentabilidad, plusvalía y seguridad jurídica.">
+    <title>Inversión Inmobiliaria en República Dominicana | Dominican Investor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* ===== RESET Y VARIABLES ===== */
@@ -1449,6 +1449,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
