Strengthen La Firma section for investor credibility

--- a/index.html
+++ b/index.html
@@ -715,7 +715,15 @@
                         <li><a href="#inicio" class="active">Inicio</a></li>
                         <li><a href="#propiedades">Oportunidades</a></li>
                         <li><a href="#servicios">Inversión & Asesoría</a></li>
-                        <li><a href="#nosotros">La Firma</a></li>
+                        <li class="dropdown">
+    <a href="#nosotros">La Firma</a>
+    <div class="dropdown-content">
+        <h4 style="margin-top: 0; color: var(--primary, #0056b3);">Dominican Investor</h4>
+        <p>es una plataforma enfocada en conectar inversionistas extranjeros con oportunidades inmobiliarias estratégicas en República Dominicana.</p>
+        <p>Nuestro enfoque combina análisis de mercado, criterio financiero y conocimiento local para identificar proyectos con alto potencial de rentabilidad y crecimiento sostenible.</p>
+        <a href="#nosotros" class="btn-dropdown">Conocer más sobre nosotros →</a>
+    </div>
+</li>
                         <li><a href="#contacto">Contacto</a></li>
                     </ul>
                 </nav>
@@ -1449,6 +1457,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
