Refine Investment & Advisory slection messaging

--- a/index.html
+++ b/index.html
@@ -714,7 +714,14 @@
                     <ul id="mainNav">
                         <li><a href="#inicio" class="active">Inicio</a></li>
                         <li><a href="#propiedades">Oportunidades</a></li>
-                        <li><a href="#servicios">Inversión & Asesoría</a></li>
+                        <li class="dropdown">
+    <a href="#servicios">Inversión & Asesoría</a>
+    <div class="dropdown-content">
+        <h4 style="margin-top: 0; color: var(--primary, #0056b3);">Asesoría Integral</h4>
+        <p>Acompañamos a inversionistas extranjeros en todo el proceso de inversión inmobiliaria en República Dominicana, desde la identificación de oportunidades hasta la toma de decisiones informadas, con un enfoque claro en retorno, riesgo y protección del capital.</p>
+        <a href="#servicios" class="btn-dropdown">Más sobre nuestra asesoría →</a>
+    </div>
+</li>
                         <li class="dropdown">
     <a href="#nosotros">La Firma</a>
     <div class="dropdown-content">
@@ -1457,6 +1464,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
