Optimize contact section for investor conversations

--- a/index.html
+++ b/index.html
@@ -731,7 +731,14 @@
         <a href="#nosotros" class="btn-dropdown">Conocer más sobre nosotros →</a>
     </div>
 </li>
-                        <li><a href="#contacto">Contacto</a></li>
+                        <li class="dropdown">
+    <a href="#contacto">Hablemos de tu inversión</a>
+    <div class="dropdown-content">
+        <h4 style="margin-top: 0; color: var(--primary, #0056b3);">¿Listo para invertir?</h4>
+        <p>Si estás evaluando invertir en bienes raíces en República Dominicana, nuestro equipo puede ayudarte a analizar oportunidades alineadas con tus objetivos de rentabilidad, plazo y perfil de riesgo.</p>
+        <a href="#contacto" class="btn-dropdown">Contáctanos ahora →</a>
+    </div>
+</li>
                     </ul>
                 </nav>
                 
@@ -1464,6 +1471,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
