Finalize footer branding and positioning

--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@ para inversionistas extranjeros.</p>
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>Dominican Investor</h3>
-                    <p>Su aliado estratégico en inversiones inmobiliarias premium. Más de 10 años transformando capital extranjero en éxito sostenido.</p>
+                    <p>Plataforma de inversión inmobiliaria en República Dominicana para inversores extranjeros.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
@@ -962,7 +962,7 @@ para inversionistas extranjeros.</p>
             </div>
             
             <div class="copyright">
-                &copy; 2026 DominicanInvestor. Todos los derechos reservados.
+                &copy; © 2026 Dominican Investor. Todos los derechos reservados.
             </div>
         </div>
     </footer>
@@ -1471,6 +1471,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
