Refactor main navigation structure for dropdown menu

--- a/index.html
+++ b/index.html
@@ -712,8 +712,28 @@
                 
                 <nav>
                     <ul id="mainNav">
-                        <li><a href="#inicio" class="active">Inicio</a></li>
-                        <li><a href="#propiedades">Oportunidades</a></li>
+                        <nav>
+  <ul class="menu">
+    <li><a href="#inicio">Inicio</a></li>
+
+    <li class="dropdown">
+      <a href="#">Inversión ▾</a>
+      <ul class="dropdown-content">
+        <li><a href="#inversion">Oportunidades</a></li>
+        <li><a href="#asesoria">Asesoría</a></li>
+      </ul>
+    </li>
+
+    <li class="dropdown">
+      <a href="#">La Firma ▾</a>
+      <ul class="dropdown-content">
+        <li><a href="#firma">Quiénes somos</a></li>
+      </ul>
+    </li>
+
+    <li><a href="#contacto">Contacto</a></li>
+  </ul>
+</nav>
                         <li class="dropdown">
     <a href="#servicios">Inversión & Asesoría</a>
     <div class="dropdown-content">
@@ -1471,6 +1491,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
