--- a/index.html
+++ b/index.html
@@ -5,40 +5,54 @@
     <meta name="description" content=meta name="description" content="Plataforma de inversión inmobiliaria en República Dominicana. Oportunidades premium para inversores extranjeros que buscan rentabilidad, plusvalía y seguridad jurídica.">
     <title>Inversión Inmobiliaria en República Dominicana | Dominican Investor</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>/* === MENU DESPLEGABLE === */
+    <style>/* === MENU DESPLEGABLE PULIDO === */
 
 #mainNav {
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 28px;
+  align-items: center;
+}
+
+#mainNav > li > a {
+  font-weight: 500;
+  padding: 8px 0;
 }
 
 #mainNav li {
   position: relative;
 }
 
-#mainNav a {
-  text-decoration: none;
+.dropdown > a {
+  cursor: pointer;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  top: 100%;
+  top: 120%;
   left: 0;
   background: #ffffff;
-  padding: 10px 0;
-  min-width: 200px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  min-width: 220px;
+  border-radius: 6px;
+  padding: 8px 0;
+  box-shadow: 0 12px 24px rgba(0,0,0,0.12);
   z-index: 1000;
 }
 
 .dropdown-content li {
-  padding: 6px 20px;
+  padding: 0;
 }
 
 .dropdown-content li a {
-  white-space: nowrap;
+  display: block;
+  padding: 10px 22px;
+  font-size: 14px;
+  color: #333;
+}
+
+.dropdown-content li a:hover {
+  background: #f4f6f8;
 }
 
 .dropdown:hover .dropdown-content {
@@ -1529,6 +1543,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
