--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
   padding: 8px 0;
   box-shadow: 0 12px 24px rgba(0,0,0,0.12);
   z-index: 1000;
+
+  opacity: 0;
+  transform: translateY(10px);
+  transition: opacity 0.25s ease, transform 0.25s ease;
 }
 
 .dropdown-content li {
@@ -57,6 +61,8 @@
 
 .dropdown:hover .dropdown-content {
   display: block;
+  opacity: 1;
+  transform: translateY(0);
 }
         /* ===== RESET Y VARIABLES ===== */
         :root {
@@ -1543,6 +1549,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
