mejora tipografía principal (h1)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head>@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
+    body {
+  font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  font-size: 15px;
+  line-height: 1.6;
+  color: #1f2933;
+}
     <meta charset="UTF-8">
     <meta name="description" content=meta name="description" content="Plataforma de inversión inmobiliaria en República Dominicana. Oportunidades premium para inversores extranjeros que buscan rentabilidad, plusvalía y seguridad jurídica.">
     <title>Inversión Inmobiliaria en República Dominicana | Dominican Investor</title>
@@ -63,6 +69,12 @@
   display: block;
   opacity: 1;
   transform: translateY(0);
+}
+h1 {
+  font-size: 44px;
+  font-weight: 600;
+  letter-spacing: -0.5px;
+  line-height: 1.2;
 }
         /* ===== RESET Y VARIABLES ===== */
         :root {
@@ -1549,6 +1561,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
