Corrección meta description duplicado en head

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   color: #1f2933;
 }
     <meta charset="UTF-8">
-    <meta name="description" content=meta name="description" content="Plataforma de inversión inmobiliaria en República Dominicana. Oportunidades premium para inversores extranjeros que buscan rentabilidad, plusvalía y seguridad jurídica.">
-    <title>Inversión Inmobiliaria en República Dominicana | Dominican Investor</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta name="description" content="Plataforma de inversión inmobiliaria en República Dominicana. Oportunidades premium para inversores extranjeros que buscan rentabilidad, plusvalía y seguridad jurídica.">
     <style>/* === MENU DESPLEGABLE PULIDO === */
 
 #mainNav {
@@ -1561,6 +1559,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
