--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
-    body {
-  font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-  font-size: 15px;
-  line-height: 1.6;
-  color: #1f2933;
-}
+<head>
+    <meta charset="UTF-8">
+
+    <!-- FUENTE EJECUTIVA -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+            font-size: 15px;
+            line-height: 1.6;
+            color: #1f2933;
+        }
+    </style>
+</head>
     <meta charset="UTF-8">
     <meta name="description" content="Plataforma de inversión inmobiliaria en República Dominicana. Oportunidades premium para inversores extranjeros que buscan rentabilidad, plusvalía y seguridad jurídica.">
     <style>/* === MENU DESPLEGABLE PULIDO === */
@@ -1559,6 +1567,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
