--- a/index.html
+++ b/index.html
@@ -786,7 +786,8 @@ h1 {
     <i class="fas fa-home"></i>
     Plataforma de inversión inmobiliaria premium <span class="country">en República Dominicana</span>
 </a>
-                /* === LOGO EJECUTIVO === */
+        <style>
+/* === LOGO EJECUTIVO === */
 .logo {
     display: flex;
     align-items: center;
@@ -810,6 +811,7 @@ h1 {
     font-weight: 500;
     color: #6b7280;
 }
+</style>
   <ul class="menu">
     <li><a href="#inicio">Inicio</a></li>
 
@@ -1588,6 +1590,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
