Header y menú ejecutivos correctamente integrados

--- a/index.html
+++ b/index.html
@@ -777,7 +777,8 @@ h1 {
     </style>
 </head>
 <body>
-    /* === HEADER EJECUTIVO === */
+  <style>
+/* === HEADER EJECUTIVO === */
 .header-container {
     display: flex;
     align-items: center;
@@ -874,6 +875,7 @@ h1 {
 .dropdown-menu a:hover {
     background: #f2f6ff;
 }
+</style>
                         <li><a href="#asesoria">Asesoría</a></li>
                         <li><a href="#firma">Firma</a></li>
                     </ul>
@@ -1605,6 +1607,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
