Header profesional completo en una pieza

--- a/index.html
+++ b/index.html
@@ -171,165 +171,265 @@ h1 {
         }
 
       <!-- ===== HEADER EJECUTIVO COMPLETO ===== -->
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        /* === HEADER EJECUTIVO === */
-        <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-<main>
-    <!-- Sección Hero (introducción atractiva) -->
-    <section class="hero">
-        <div class="container">
-            <h1>Dominican Investor</h1>
-            <p>Descubre oportunidades de inversión inmobiliaria en República Dominicana, seleccionadas por su alta rentabilidad, potencial de plusvalía y seguridad jurídica para inversionistas extranjeros.</p>
-            <a href="#propiedades" class="btn-primary">Ver oportunidades de inversión</a>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dominican Investor</title>
+
+    <!-- Font Awesome para íconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+    <!-- Fuentes Google profesionales (elegantes y limpias) -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
+
+    <style>
+        :root {
+            --primary: #0a2540;       /* Azul oscuro ejecutivo */
+            --accent: #1b5cff;        /* Azul vibrante para hover y botones */
+            --text: #425466;          /* Texto principal */
+            --light: #f8fbff;         /* Fondo claro */
+            --white: #ffffff;
+            --shadow: 0 10px 30px rgba(0,0,0,0.08);
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            color: var(--text);
+            background: var(--white);
+        }
+
+        .container {
+            max-width: 1280px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        /* ===== HEADER PROFESIONAL (pegajoso/sticky) ===== */
+        header {
+            background: var(--white);
+            border-bottom: 1px solid #eef2f6;
+            padding: 20px 0;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            box-shadow: var(--shadow);
+            transition: all 0.3s ease;
+        }
+
+        .header-container {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        /* Logo refinado */
+        .logo {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            text-decoration: none;
+            color: var(--primary);
+        }
+
+        .logo-icon {
+            font-size: 42px;
+            color: var(--accent);
+        }
+
+        .logo-text h1 {
+            font-family: 'Playfair Display', serif;
+            font-size: 32px;
+            font-weight: 700;
+            margin: 0;
+            line-height: 1;
+        }
+
+        .logo-text .slogan {
+            font-size: 14px;
+            color: #6b7280;
+            font-weight: 500;
+            margin-top: 4px;
+        }
+
+        /* Menú principal */
+        #mainNav {
+            display: flex;
+            gap: 40px;
+            list-style: none;
+            margin: 0;
+        }
+
+        #mainNav a {
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 15.5px;
+            color: var(--primary);
+            padding: 10px 0;
+            position: relative;
+            transition: color 0.3s ease;
+        }
+
+        #mainNav a:hover,
+        #mainNav a.active {
+            color: var(--accent);
+        }
+
+        #mainNav a::after {
+            content: '';
+            position: absolute;
+            width: 0;
+            height: 3px;
+            bottom: -8px;
+            left: 0;
+            background: var(--accent);
+            transition: width 0.3s ease;
+        }
+
+        #mainNav a:hover::after,
+        #mainNav a.active::after {
+            width: 100%;
+        }
+
+        /* Dropdown profesional */
+        .dropdown {
+            position: relative;
+        }
+
+        .dropdown-menu {
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            background: var(--white);
+            min-width: 240px;
+            padding: 16px 0;
+            border-radius: 12px;
+            box-shadow: var(--shadow);
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.3s ease;
+            margin-top: 10px;
+            border: 1px solid #f0f2f5;
+        }
+
+        .dropdown:hover .dropdown-menu {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .dropdown-menu a {
+            display: block;
+            padding: 12px 28px;
+            color: var(--primary);
+            font-size: 15px;
+            transition: all 0.2s;
+        }
+
+        .dropdown-menu a:hover {
+            background: var(--light);
+            color: var(--accent);
+            padding-left: 36px;
+        }
+
+        /* Contacto rápido en header */
+        .header-contact {
+            font-size: 14px;
+            color: var(--primary);
+            white-space: nowrap;
+        }
+
+        .header-contact a {
+            color: var(--accent);
+            text-decoration: none;
+        }
+
+        .header-contact a:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive básico */
+        @media (max-width: 992px) {
+            .header-container {
+                flex-direction: column;
+                gap: 20px;
+                text-align: center;
+            }
+
+            #mainNav {
+                gap: 24px;
+                justify-content: center;
+                flex-wrap: wrap;
+            }
+
+            .dropdown-menu {
+                left: 0;
+                transform: translateX(0);
+                width: 100%;
+                text-align: center;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <div class="container header-container">
+
+            <!-- Logo -->
+            <a href="#inicio" class="logo">
+                <i class="fas fa-home logo-icon"></i>
+                <div class="logo-text">
+                    <h1>Dominican Investor</h1>
+                    <div class="slogan">Inversión inmobiliaria premium en República Dominicana</div>
+                </div>
+            </a>
+
+            <!-- Menú -->
+            <nav>
+                <ul id="mainNav">
+                    <li><a href="#inicio" class="active">Inicio</a></li>
+                    <li><a href="#propiedades">Oportunidades</a></li>
+                    <li class="dropdown">
+                        <a href="#">Inversión ▾</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#propiedades">Oportunidades</a></li>
+                            <li><a href="#asesoria">Asesoría</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#">La Firma ▾</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#nosotros">Quiénes Somos</a></li>
+                            <li><a href="#equipo">Nuestro Equipo</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
+
+            <!-- Contacto rápido -->
+            <div class="header-contact">
+                <a href="tel:+18095712100">+1 809 571 2100</a> | 
+                <a href="mailto:info@dominicainvestor.com">info@dominicainvestor.com</a>
+            </div>
+
         </div>
-    </section>
-
-    <!-- Sección de Propiedades con filtros -->
-    <section id="propiedades" class="properties-section">
-        <div class="container">
-            <h2>Propiedades Destacadas</h2>
-
-            <!-- Filtros organizados y bonitos -->
-            <div class="filters">
-                <div class="filter-group">
-                    <label>Categoría</label>
-                    <select>
-                        <option>Todas las categorías</option>
-                        <!-- Agrega más opciones si tienes -->
-                    </select>
-                </div>
-
-                <div class="filter-group">
-                    <label>Tipo</label>
-                    <select>
-                        <option>Compra o Alquiler</option>
-                    </select>
-                </div>
-
-                <div class="filter-group">
-                    <label>Precio Máximo</label>
-                    <input type="number" placeholder="Ej: 500000" min="0">
-                </div>
-
-                <div class="filter-group">
-                    <label>Ubicación</label>
-                    <select>
-                        <option>Zonas de alto potencial</option>
-                    </select>
-                </div>
-
-                <button class="btn-primary">Analizar Oportunidades</button>
-                <button class="btn-secondary">Limpiar Filtros</button>
-            </div>
-
-            <!-- Grid de propiedades (aquí va tu lista actual) -->
-            <div class="grid-properties">
-                <p>Cargando propiedades...</p>
-                <!-- Aquí puedes poner después tus tarjetas de propiedades una por una -->
-            </div>
-
-            <!-- Botón nueva propiedad (abajo y centrado) -->
-            <div style="text-align: center; margin-top: 40px;">
-                <button class="btn-success">+ Nueva Propiedad</button>
-        /* Hero section */
-.hero {
-    padding: 100px 0 80px;
-    text-align: center;
-    background: linear-gradient(to bottom, #f8fbff, white);
-}
-
-.hero h1 {
-    font-size: 48px;
-    margin-bottom: 16px;
-    color: #0a2540;
-}
-
-.hero p {
-    font-size: 18px;
-    max-width: 700px;
-    margin: 0 auto 30px;
-    color: #425466;
-}
-
-.btn-primary {
-    background: #1b5cff;
-    color: white;
-    padding: 14px 32px;
-    border: none;
-    border-radius: 8px;
-    font-size: 16px;
-    cursor: pointer;
-    text-decoration: none;
-    display: inline-block;
-}
-
-.btn-primary:hover { background: #0a47cc; }
-
-/* Filtros */
-.filters {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
-    margin: 40px 0;
-    background: white;
-    padding: 20px;
-    border-radius: 12px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.08);
-}
-
-.filter-group {
-    flex: 1;
-    min-width: 180px;
-}
-
-.filter-group label {
-    display: block;
-    margin-bottom: 6px;
-    font-weight: 600;
-    color: #0a2540;
-}
-
-.filter-group select,
-.filter-group input {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #d1d9e0;
-    border-radius: 6px;
-    font-size: 15px;
-}
-
-.btn-secondary {
-    background: #e2e8f0;
-    color: #0a2540;
-}
-
-/* Grid de propiedades */
-.grid-properties {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-    gap: 24px;
-    margin-top: 40px;
-}
-
-.btn-success {
-    background: #10b981;
-    color: white;
-    padding: 14px 28px;
-    border: none;
-    border-radius: 8px;
-    font-size: 16px;
-    cursor: pointer;
-}
-            </div>
-        </div>
-    </section>
-</main>
     </header>
+
+    <!-- Aquí continúa el resto de tu página (hero, propiedades, etc.) -->
+
+</body>
+</html>
     
     <!-- El resto de tu página va aquí -->
 </body>
@@ -1056,6 +1156,7 @@ para inversionistas extranjeros.</p>
 </body>
 
 </html>
+
 
 
 
