feat: agregar sección de resumen inicial con tarjetas de Oportunidades, Inversión, La Firma y Contacto  - Implementada nueva sección debajo del hero con 4 tarjetas informativas - Contenido basado en la descripción oficial del negocio - Incluye imágenes relevantes, listas con checks y botones de llamada a acción - Mejora significativa en la primera impresión y conversión del landing page
Added detailed sections for opportunities, investment strategy, and contact information, enhancing the content and structure of the webpage.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,47 @@
             <a href="#propiedades" class="btn btn-primary btn-lg mt-4">Ver Oportunidades</a>
         </div>
     </section>
+    1. OPORTUNIDADES
+
+Explore un catálogo curado de propiedades seleccionadas bajo rigurosos criterios de rentabilidad, ubicación y potencial de revalorización. Filtre por tipo de activo, zona, precio y rendimiento esperado. Incluye:
+
+Proyectos en pre-venta con ventajas fiscales
+
+Propiedades en alquiler con contratos garantizados
+
+Desarrollos turísticos con gestión hotelera incluida
+
+Oportunidades off-market exclusivas para inversores registrados
+
+2. INVERSIÓN subcarpetas / ASESORÍA/OPORTUNIDADES 
+
+Estrategia de Inversión Personalizada para No Residentes
+
+Servicios especializados para proteger y maximizar su inversión:
+
+Due Diligence completo: Validación legal, registral y urbanística de cada propiedad
+
+Gestión patrimonial: Administración integral de su activo desde el exterior
+
+Estudio de rentabilidad: Proyecciones realistas con escenarios optimistas/conservadores
+
+
+3. LA FIRMA
+
+Más de 15 años de experiencia facilitando inversión inmobiliaria extranjera en República Dominicana. con una basta Red de contactos con desarrolladores, notarías y entidades financieras.No somos un portal inmobiliario común; somos su socio estratégico en el país, con reputación, resultados y referencias verificables de clientes internacionales.
+
+
+4. CONTACTO
+Contacto
+Dominican Investor
+Santo Domingo Este, – Boca Chica
+Correo: dominicaninvestor@outlook.com
+
+Atención telefónica
+1 (829) 719 4086 
+Lunes a Domingo 9:00 AM – 6:00 PM 
+
+
 
     <!-- Propiedades Section -->
     <section id="propiedades" class="py-5">
@@ -132,6 +173,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
 
 
 
